--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ defaults: &defaults
 jobs:
   checkout:
     <<: *defaults
+    docker:
+      image: alpine:3
     steps:
       - checkout
       - run: mkdir test-reports
@@ -162,7 +164,7 @@ workflow:
   version: 2
   build-and-deploy:
     jobs:
-      - checkout
+      - checkout:
       - dashboard-install:
           requires:
             - checkout
