--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
   backend-install:
     <<: *defaults
     docker:
-      image: circleci/openjdk:8
+      - image: circleci/openjdk:8
     steps:
       - attach_workspace:
           at: ~/repo
@@ -132,7 +132,7 @@ jobs:
   heroku-deploy:
     <<: *defaults
     docker:
-      image: circleci/node:latest
+      - image: circleci/node:latest
     steps:
       - attach_workspace:
           at: ~/repo
@@ -147,7 +147,7 @@ jobs:
   dockerhub-publish:
     <<: *defaults
     docker:
-      image: buildpack-deps:trusty
+      - image: buildpack-deps:trusty
     steps:
       - attach_workspace:
           at: ~/repo
