--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -164,7 +164,7 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - checkout:
+      - checkout
       - dashboard-install:
           requires:
             - checkout
