--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,13 +88,6 @@ jobs:
           name: Start mongo & rabbit
           command: .circleci/run_compose.sh up -d mongo rabbit
       - run:
-          name: Download Selenium
-          command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
-      - run:
-          name: Start Selenium
-          command: java -jar selenium-server-standalone-3.5.3.jar -log test-reports/selenium.log
-          background: true
-      - run:
           name: Server's UT & IT
           command: ./gradlew test --tests test.*
       - store_test_results:
@@ -148,6 +141,7 @@ jobs:
     <<: *defaults
     machine: true
     steps:
+      - *attach-workspace
       - *restore-app-image
       - run:
           name: Start as sandbox
