--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,7 +106,8 @@ jobs:
 
   e2e-tests:
     <<: *defaults
-    machine: true
+    machine:
+      - image: circleci/ubuntu-1604:201903-01
     steps:
       - *attach-workspace
       - *restore-app-image
