--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,6 +81,9 @@ jobs:
   backend-build:
     <<: *defaults
     machine: true
+    environment:
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
     steps:
       - *attach-workspace
       - run:
@@ -108,6 +111,9 @@ jobs:
     <<: *defaults
     machine:
       image: ubuntu-1604:201903-01
+    environment:
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
     steps:
       - *attach-workspace
       - *restore-app-image
@@ -137,6 +143,9 @@ jobs:
   sandbox-tests:
     <<: *defaults
     machine: true
+    environment:
+      JVM_OPTS: -Xmx3200m
+      TERM: dumb
     steps:
       - *attach-workspace
       - *restore-app-image
