--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
           root: ~/repo
           paths: .
 
-  dashboard-pach:
+  dashboard-pack:
     <<: *defaults
     docker:
       - image: circleci/node:12
