--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - image: circleci/node:12
     steps:
       - *attach-workspace
-      - run: npm pack ticktok-dashboard@0.0.8 && tar zxvf ticktok-dashboard-0.0.8.tgz && mv package dashboard
+      - run: .circleci/get-dashboard.sh
       - persist_to_workspace:
           root: ~/repo
           paths: dashboard
