Added dockerhub publish for master

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -198,10 +198,7 @@ jobs:
       - *restore-app-image
       - run:
           name: Publish to dockerhub
-          command: |
-            if [[ "${CIRCLE_BRANCH}" == "master" ]] || [[ "${CIRCLE_BRANCH}" == realease-* ]]; then
-              .circleci/publish_to_dockerhub.sh
-            fi
+          command: .circleci/publish_to_dockerhub.sh
 
 
 workflows:
@@ -256,6 +253,15 @@ workflows:
             tags:
               only: /.*/
       - heroku-deploy:
+          requires:
+            - backend-unit-tests
+            - e2e-tests
+            - sandbox-tests
+          filters:
+            branches:
+              only:
+                - master
+      - dockerhub-publish-master:
           requires:
             - backend-unit-tests
             - e2e-tests
