--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -99,6 +99,9 @@ jobs:
       - *attach-workspace
       - *restore-app-image
       - run:
+          name: Install node@v12.14.0
+          command: .circleci/upgrade_node.sh
+      - run:
           name: Download Selenium
           command: curl -O http://selenium-release.storage.googleapis.com/3.5/selenium-server-standalone-3.5.3.jar
       - run: mkdir test-reports
@@ -112,6 +115,9 @@ jobs:
       - run:
           name: E2E tests against dockered app
           command: ./gradlew test -Ptags=core-tests -DstartApp=no --scan
+      - run:
+          name: Dashboard tests
+          command: HOST=http://localhost:9643 npm run spec --prefix dashboard
       - store_test_results:
           path: build/test-results
       - store_artifacts:
