--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
     ext.kotlinVersion = '1.3.70'
+    ext.cache2kVersion = '1.2.4.Final'
+    ext.swaggerVersion = '2.8.0'
+    ext.lombokVersion = '1.18.12'
     repositories {
         mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.2.5.RELEASE")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
@@ -13,25 +15,14 @@ buildscript {
 
 
 plugins {
-    id 'com.gradle.build-scan' version '2.3'
+    id 'java'
+    id 'idea'
+    id 'org.springframework.boot' version '2.2.4.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.70'
+    id 'com.gradle.build-scan' version '2.4.2'
 }
 
-apply plugin: 'java'
-apply plugin: 'kotlin'
-apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
-apply plugin: 'io.spring.dependency-management'
-
-ext {
-    cache2kVersion = '1.2.2.Final'
-    swaggerVersion = '2.6.1'
-    lombokVersion = '1.16.20'
-}
-
-bootJar {
-    baseName = 'ticktok'
-    version = '0.1.2'
-}
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -49,29 +40,32 @@ dependencies {
     compileOnly "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
+
     // Spring
     compile("org.springframework.boot:spring-boot-starter-web") {
         exclude module: "spring-boot-starter-tomcat"
     }
-    compile "org.springframework.boot:spring-boot-starter-log4j2"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-security"
-    compile "org.springframework.boot:spring-boot-starter-aop"
-    compile "org.springframework.boot:spring-boot-starter-data-mongodb"
-    compile "org.springframework.boot:spring-boot-starter-amqp"
-    compile "org.springframework.boot:spring-boot-starter-hateoas"
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+    implementation "org.springframework.boot:spring-boot-starter-log4j2"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-aop"
+    implementation "org.springframework.boot:spring-boot-starter-data-mongodb"
+    implementation "org.springframework.boot:spring-boot-starter-amqp"
+
+    // Swagger
+    compile "io.springfox:springfox-swagger2:${swaggerVersion}"
+//    compile "io.springfox:springfox-swagger-ui:${swaggerVersion}"
 
     compile "org.eclipse.jetty:jetty-webapp:9.3.+"
     compile "org.eclipse.jetty:jetty-jsp:9.2.+"
 
-    compile "org.hibernate.validator:hibernate-validator:6.0.13.Final"
+    compile "org.hibernate.validator:hibernate-validator:6.1.2.Final"
     compile "javax.validation:validation-api:2.0.1.Final"
 
     compile "com.google.code.gson:gson:2.8.2"
 
-    // Swagger
-    compile "io.springfox:springfox-swagger2:${swaggerVersion}"
-    compile "io.springfox:springfox-swagger-ui:${swaggerVersion}"
+
 
     implementation "org.cache2k:cache2k-api:${cache2kVersion}"
     runtimeOnly "org.cache2k:cache2k-core:${cache2kVersion}"
@@ -90,12 +84,13 @@ dependencies {
 
     //Spring
     testCompile "org.springframework.boot:spring-boot-starter-test"
+    testCompile "org.springframework.security:spring-security-test"
 
     //Other
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
     testCompile 'org.assertj:assertj-core:3.11.1'
-    testCompile "org.awaitility:awaitility-kotlin:3.1.5"
+    testCompile "org.awaitility:awaitility-kotlin:4.0.2"
 }
 
 compileKotlin {
@@ -128,7 +123,6 @@ clean {
 }
 
 test {
-    environment "DASHBOARD_URL", "http://localhost:9643"
     systemProperty "startApp", System.getProperty("startApp")
     useJUnitPlatform {
         if (project.hasProperty('tags')) {
