--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ targetCompatibility = 1.8
 
 bootJar {
     mainClassName = 'io.ticktok.server.Application'
+    archiveFileName = 'ticktok-io.jar'
 }
 
 
